# kfs

./: .gitignore  CMakeLists.txt  Makefile  README.md  kfs.h  kfs2.c  main.c  spec.md  win.mak
config/: config.ini
example/: test.arc
include/: kfs.h  kfs3.h  kfs4.h
src/: kfs.c  kfs3.c  kfs4.c  main.c  main3.c  winmain.c
